# Academic_gestion

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_PUBLICO.md  crear_evento.py  crear_mock_importacion.py  data_toy.csv  demo_sistema_pagos.sh  docker-compose.prod.yml  docker-compose.yml  ejemplo_matriculacion_masiva.csv  passenger_wsgi.py  start_dev.sh  start_prod.sh
backend/: Dockerfile  Dockerfile.prod  crear_evento.py  env.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/.github/workflows/: ci.yml
backend/api/: docs.py
backend/api/v1/: urls.py
backend/gestion_academica/: __init__.py  logging.py  monitoring.py  settings.py  urls.py  views.py
backend/modulos/: __init__.py
backend/modulos/modulo_certificados/: admin.py  apps.py  models.py  serializers.py  tests.py  tests_endpoints.py  urls.py  views.py
backend/modulos/modulo_certificados/migrations/: 0001_initial.py  0002_initial.py  0002_remove_numero_maximo_cuotas.py  0003_merge_conflict_fix.py
backend/modulos/modulo_certificados/services/: pdf_generator.py
backend/modulos/modulo_estudiantes/: admin.py  apps.py  models.py  tests.py  tests_endpoints.py  urls.py  views.py
backend/modulos/modulo_estudiantes/management/commands/: matricular_estudiantes_masivo.py
backend/modulos/modulo_estudiantes/migrations/: 0001_initial.py
backend/modulos/modulo_pagos/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  tests_endpoints.py  urls.py  views.py
backend/modulos/modulo_pagos/management/commands/: crear_plan_pago.py  estadisticas_evento.py  registrar_pago_cuota.py  resumen_estudiante.py  verificar_cuotas_atrasadas.py
backend/modulos/modulo_pagos/migrations/: 0001_initial.py  0002_matricula_plan_pago.py  0003_beca_descuento.py  0004_planpagopersonalizado.py  0005_alter_planpagopersonalizado_numero_cuotas_personalizado.py  0006_planpagopersonalizado_aplica_certificado_and_more.py  0007_remove_planpagopersonalizado_aplica_certificado_and_more.py  0009_fix_database_sync.py  0010_pago_monto_aplicado_colegiatura_alter_pago_tipo_pago_and_more.py  0011_unificar_planes_pago.py  0012_alter_planpago_monto_colegiatura_and_more.py  0013_matricula_comprobante_matricula_and_more.py
backend/modulos/modulo_pagos/services/: descuentos_service.py  sistema_pagos_service.py
backend/modulos/modulo_pagos/templates/admin/modulo_pagos/: reestructurar_plan.html
backend/public/: tester_certificados.html
backend/scripts/: deploy.sh
frontend/: README.md  (+1 more)
(+22 files in other folders)
